// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders Button link unchanged 1`] = `
<div>
  <a
    class="sc-b4940b6a-1 doArMP undefined "
  >
    <span>
      button test
    </span>
  </a>
</div>
`;

exports[`Button renders form Button unchanged 1`] = `
<div>
  <button
    class="sc-b4940b6a-2 gqsVTE undefined "
  >
    <span>
      button test
    </span>
  </button>
</div>
`;
